--- a/services/eosio/config/config.ini
+++ b/services/eosio/config/config.ini
@@ -160,7 +160,7 @@ access-control-allow-origin = *
 # http-max-bytes-in-flight-mb = 500
 
 # Maximum time for processing a request. (eosio::http_plugin)
-# http-max-response-time-ms = 30
+http-max-response-time-ms = 30
 
 # Append the error log to HTTP responses (eosio::http_plugin)
 verbose-http-errors = true
@@ -299,7 +299,7 @@ enable-stale-production = true
 # pause-on-startup = false
 
 # Limits the maximum time (in milliseconds) that is allowed a pushed transaction's code to execute before being considered invalid (eosio::producer_plugin)
-max-transaction-time = 1000
+max-transaction-time = 3000000
 
 # Limits the maximum age (in seconds) of the DPOS Irreversible Block for a chain this node will produce blocks on (use negative value to indicate unlimited) (eosio::producer_plugin)
 # max-irreversible-block-age = -1
