--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,33 @@
 version: "3"
 
 services:
-  eostutorial:
-    container_name: eostutorial
+  eosio:
+    container_name: eosio
     build:
       context: ./services/eosio
       dockerfile: Dockerfile
-    image: my/eostutorial
+    image: my/eosio
     ports:
-      - '6666:6666' # keosd port
       - '8000:8000' # HTTP SERVER PORT
       - '8080:8080' # code server PORT
       - '9000:9000' # FIRST P2P PORT
-    expose:
-      - 6666
     volumes:
       - ./services/eosio:/opt/application   #container 內 mapping出來
-      - wallet-data-volume:/opt/eosio/bin/data-dir
+    depends_on: 
+      - keosd
+  keosd:
+    container_name: keosd
+    build:
+      context: ./services/keosd
+      dockerfile: Dockerfile
+    image: my/keosd
+    command: /bin/sh -c /opt/application/scripts/setup.sh
+    volumes:
+      - wallet-data-volume:/opt/eosio-wallet
+    expose:
+      - 6666
+    ports:
+      - '6666:6666' # keosd port
 volumes:
   wallet-data-volume:
     external: true
